migrated custom UI actions to commands

--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -3,9 +3,12 @@ pluginName=ModuleStudio UI
 providerName = Guite - Guckelsberger Informationstechnik
 fragmentName = ModuleStudio UI Locales Deutsch
 
-perspectiveName=ModuleStudio-Perspektive
-perspectiveDescription=ModuleStudio-Perspective
-dashboardViewName=Dashboard
+perspective.name=ModuleStudio-Perspektive
+perspective.description=Die Standardperspektive von ModuleStudio
+view.dashboard.name=Dashboard
+
+unwelcome.activity.name=unwillkommen
+unwelcome.activity.description=unwillkommene Contributions
 
 
 
@@ -14,15 +17,26 @@ dashboardViewName=Dashboard
 newWizardName=Anwendungs-Diagramm
 newWizardDesc=Erstellt ein Anwendungs-Diagramm.
 
-applicationActionSetLabel=<Anwendungs-Aktionen
-newDiagramActionLabel=Anwendungs-Diagramm
-websiteActionLabel=Homepage
-generateActionLabel=Anwendung generieren
-importXmlTableDefinitionLabel=XML-Tabellendefinition importieren
-openURIActionLabel=URI öffnen...
-openURIActionDescription=Datei über URI öffnen
-openActionLabel=Öffnen...
-openActionDescription=Datei öffnen
+newDiagramHandlerLabel=Anwendungs-Diagramm
+importXmlTableDefinitionHandlerLabel=XML-Tabellendefinition importieren
+generateHandlerLabel=Anwendung generieren
+websiteHandlerLabel=Homepage
 
-unwelcome.activity.description=unwillkommene Contributions
-unwelcome.activity.name=unwillkommen
+
+# example stuff
+view.example.name = View
+menu.label = Datei-Menü
+command.label = Beenden
+menu.label.0 = Anwendungs-Menu
+menu.label.1 = Anderes Menu
+menu.label.2 = Ein Untermenü
+command.label.0 = Nochmal beenden :-)
+command.tooltip = Beenden
+command.tooltip.0 = Beispiel-Aktion aktivieren
+command.tooltip.1 = Beispiel-Aktion deaktivieren
+command.tooltip.2 = Beispiel-Aktion
+command.name = Beenden
+command.name.0 = Beispiel-Aktion
+command.name.1 = Beispiel-Aktion aktivieren
+command.name.2 = Beispiel-Aktion deaktivieren
+command.name.3 = Bearbeiten
