removed unrequired handler

--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -25,17 +25,13 @@ websiteHandlerLabel=Homepage
 
 # example stuff
 view.example.name = View
-menu.label = Datei-Menü
-command.label = Beenden
-menu.label.0 = Anwendungs-Menu
-menu.label.1 = Anderes Menu
+command.exit.label = Beenden
+menu.label.1 = Ein Menu
 menu.label.2 = Ein Untermenü
-command.label.0 = Nochmal beenden :-)
-command.tooltip = Beenden
+command.label.0 = Generieren
 command.tooltip.0 = Beispiel-Aktion aktivieren
 command.tooltip.1 = Beispiel-Aktion deaktivieren
 command.tooltip.2 = Beispiel-Aktion
-command.name = Beenden
 command.name.0 = Beispiel-Aktion
 command.name.1 = Beispiel-Aktion aktivieren
 command.name.2 = Beispiel-Aktion deaktivieren
