--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -17,21 +17,11 @@ unwelcome.activity.description=unwillkommene Contributions
 newWizardName=Anwendungs-Diagramm
 newWizardDesc=Erstellt ein Anwendungs-Diagramm.
 
-newDiagramHandlerLabel=Anwendungs-Diagramm
+newApplicationHandlerLabel=Neue Anwendung
+openModelHandlerLabel=Modell öffnen
+importModelHandlerLabel=Modell importieren
+migrateOldModelHandlerLabel=Altes Modell aus 0.6.2 migrieren
 importXmlTableDefinitionHandlerLabel=XML-Tabellendefinition importieren
 generateHandlerLabel=Anwendung generieren
+openKeyAssistHandlerLabel=Tastaturhilfe
 websiteHandlerLabel=Homepage
-
-
-# example stuff
-view.example.name = View
-menu.label.1 = Ein Menu
-menu.label.2 = Ein Untermenü
-command.label.0 = Generieren
-command.tooltip.0 = Beispiel-Aktion aktivieren
-command.tooltip.1 = Beispiel-Aktion deaktivieren
-command.tooltip.2 = Beispiel-Aktion
-command.name.0 = Beispiel-Aktion
-command.name.1 = Beispiel-Aktion aktivieren
-command.name.2 = Beispiel-Aktion deaktivieren
-command.name.3 = Bearbeiten
