updated cheatsheet translation

--- a/production/de.guite.modulestudio.help.cheatsheets.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/production/de.guite.modulestudio.help.cheatsheets.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -4,11 +4,11 @@ providerName = Guite - Guckelsberger Informationstechnik
 fragmentName = ModuleStudio Cheatsheets Locales Deutsch
 
 #Cheatsheets
-cheatsheet.CHEAT_SHEETS=Cheatsheets
-cheatsheet.CHEAT_SHEETS_MENU=Cheatsheets...
+cheatsheet.CHEAT_SHEETS=Spickzettel
+cheatsheet.CHEAT_SHEETS_MENU=Spickzettel...
 
 cheatsheet.category.modulestudio=ModuleStudio Entwicklung
-cheatsheet.modulestudio.name=ModuleStudio Cheatsheets
+cheatsheet.modulestudio.name=ModuleStudio Spickzettel
 cheatsheet.modulestudio.desc=Eine Sammlung von Tutorials für verschiedene Teile von ModuleStudio
 
 content-type.name.simpleCS=Einfache Cheatsheet-Datei
