--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -7,6 +7,31 @@ perspective.name=ModuleStudio-Perspektive
 perspective.description=Die Standardperspektive von ModuleStudio
 view.dashboard.name=Dashboard
 
+command.file.newapplication.name=Neue Anwendung
+command.file.newapplication.mnemonic=N
+command.file.newapplication.description=Eine neue Anwendung erstellen
+command.file.openmodel.name=Modell öffnen
+command.file.openmodel.mnemonic=O
+command.file.openmodel.description=Ein bestehendes Modell öffnen
+command.file.importmodel.name=Modelldatei importieren
+command.file.importmodel.mnemonic=I
+command.file.importmodel.description=Eine bestehende Modelldatei importieren
+command.file.migrateoldmodel.name=Modell aus 0.6.2 migrieren
+command.file.migrateoldmodel.mnemonic=M
+command.file.migrateoldmodel.description=Ein altes Modell aus Version 0.6.2 migrieren
+command.file.importxmltables.name=XML-Tabellendefinition importieren
+command.file.importxmltables.mnemonic=I
+command.file.importxmltables.description=Alte Tabellendefinition aus XML-Datei importieren
+command.file.generate.name=Anwendung generieren
+command.file.generate.mnemonic=G
+command.file.generate.description=Den Generator-Workflow starten
+command.help.keyassist.name=Tastaturhilfe
+command.help.keyassist.mnemonic=T
+command.help.keyassist.description=Tastaturbelegung einblenden
+command.help.website.name=Homepage
+command.help.website.mnemonic=O
+command.help.website.description=Die Website von ModuleStudio öffnen
+
 unwelcome.activity.name=unwillkommen
 unwelcome.activity.description=unwillkommene Contributions
 
@@ -16,12 +41,3 @@ unwelcome.activity.description=unwillkommene Contributions
 
 newWizardName=Anwendungs-Diagramm
 newWizardDesc=Erstellt ein Anwendungs-Diagramm.
-
-newApplicationHandlerLabel=Neue Anwendung
-openModelHandlerLabel=Modell öffnen
-importModelHandlerLabel=Modell importieren
-migrateOldModelHandlerLabel=Altes Modell aus 0.6.2 migrieren
-importXmlTableDefinitionHandlerLabel=XML-Tabellendefinition importieren
-generateHandlerLabel=Anwendung generieren
-openKeyAssistHandlerLabel=Tastaturhilfe
-websiteHandlerLabel=Homepage
