--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -10,9 +10,9 @@ view.dashboard.name=Dashboard
 command.file.newapplication.name=Neue Anwendung
 command.file.newapplication.mnemonic=N
 command.file.newapplication.description=Eine neue Anwendung erstellen
-command.file.openmodel.name=Modell öffnen
-command.file.openmodel.mnemonic=O
-command.file.openmodel.description=Ein bestehendes Modell öffnen
+command.file.openproject.name=Projekt öffnen
+command.file.openproject.mnemonic=O
+command.file.openproject.description=Ein bestehendes Modellprojekt öffnen
 command.file.importmodel.name=Modelldatei importieren
 command.file.importmodel.mnemonic=I
 command.file.importmodel.description=Eine bestehende Modelldatei importieren
