working on new project wizard

--- a/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/wizard/messages_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/wizard/messages_de.properties
@@ -1,26 +1,33 @@
 #Properties file for de.guite.modulestudio.ui
-ModuleStudioCreationWizardTitle=Neues Anwendungsdiagramm
-#ModuleStudioCreationWizard_DiagramModelFilePageTitle=Erstellung eines Anwendungsdiagramms
-#ModuleStudioCreationWizard_DiagramModelFilePageDescription=Datei für das Anwendungsdiagramm wählen.
-ModuleStudioCreationWizard_DomainModelFilePageTitle=Erstellung eines Anwendungsmodells
-ModuleStudioCreationWizard_DomainModelFilePageDescription=Datei für das Anwendungsmodell wählen
-ModuleStudioCreationWizardOpenEditorError=Fehler beim Öffnen des Diagramm-Editors
-ModuleStudioCreationWizardCreationError=Probleme bei der Erstellung
-ModuleStudioCreationWizardPageExtensionError=Der Dateiname sollte die Endung {0} haben.
+ModuleStudioProjectWizard_InitialProjectName=MeinProjekt
+ModuleStudioProjectWizardTitle=Neues ModuleStudio-Projekt
+ModuleStudioProjectWizard_NewProjectCreationPageTitle=Ein neues ModuleStudio-Projekt erstellen
+ModuleStudioProjectWizard_NewProjectCreationPageDescription=Gebe einen Projektnamen ein
 
-ModuleStudioCreationWizardAppSettingsPage_ApplicationName=Name der Anwendung:
-ModuleStudioCreationWizardAppSettingsPage_AuthorName=Name des Autors:
-ModuleStudioCreationWizardAppSettingsPage_DatabaseTablePrefix=Präfix der Datenbanktabellen:
-ModuleStudioCreationWizardAppSettingsPage_EmailAddress=E-Mail-Adresse:
-ModuleStudioCreationWizardAppSettingsPage_PleaseEnterApplicationName=Bitte gebe einen Namen für Deine Anwendung ein.
-ModuleStudioCreationWizardAppSettingsPage_PleaseEnterPrefix=Bitte gebe ein Präfix für die Datenbanktabellen Deiner Anwendung ein.
-ModuleStudioCreationWizardAppSettingsPage_PleaseEnterTheVendorName=Bitte gebe einen Namen für den Anbieter ein.
-ModuleStudioCreationWizardAppSettingsPage_PleaseEnterYourEmailAddress=Bitte gebe Deine E-Mail-Adresse ein.
-ModuleStudioCreationWizardAppSettingsPage_PleaseEnterYourName=Bitte gebe Deinen Namen ein.
-ModuleStudioCreationWizardAppSettingsPage_PleaseEnterYourUrl=Bitte gebe Deine URL ein.
-ModuleStudioCreationWizardAppSettingsPage_ThankYou=Vielen Dank.
-ModuleStudioCreationWizardAppSettingsPage_Url=URL:
-ModuleStudioCreationWizardAppSettingsPage_VendorName=Name des Anbieters:
+
+
+
+ModuleStudioProjectWizard_DiagramModelFilePageTitle=Erstellung eines Anwendungsdiagramms
+ModuleStudioProjectWizard_DiagramModelFilePageDescription=Datei für das Anwendungsdiagramm wählen.
+ModuleStudioProjectWizard_DomainModelFilePageTitle=Erstellung eines Anwendungsmodells
+ModuleStudioProjectWizard_DomainModelFilePageDescription=Datei für das Anwendungsmodell wählen
+ModuleStudioProjectWizard_OpenEditorError=Fehler beim Öffnen des Diagramm-Editors
+ModuleStudioProjectWizard_CreationError=Probleme bei der Erstellung
+ModuleStudioProjectWizard_PageExtensionError=Der Dateiname sollte die Endung {0} haben.
+
+ModuleStudioProjectWizard_AppSettingsPage_ApplicationName=Name der Anwendung:
+ModuleStudioProjectWizard_AppSettingsPage_AuthorName=Name des Autors:
+ModuleStudioProjectWizard_AppSettingsPage_DatabaseTablePrefix=Präfix der Datenbanktabellen:
+ModuleStudioProjectWizard_AppSettingsPage_EmailAddress=E-Mail-Adresse:
+ModuleStudioProjectWizard_AppSettingsPage_PleaseEnterApplicationName=Bitte gebe einen Namen für Deine Anwendung ein.
+ModuleStudioProjectWizard_AppSettingsPage_PleaseEnterPrefix=Bitte gebe ein Präfix für die Datenbanktabellen Deiner Anwendung ein.
+ModuleStudioProjectWizard_AppSettingsPage_PleaseEnterTheVendorName=Bitte gebe einen Namen für den Anbieter ein.
+ModuleStudioProjectWizard_AppSettingsPage_PleaseEnterYourEmailAddress=Bitte gebe Deine E-Mail-Adresse ein.
+ModuleStudioProjectWizard_AppSettingsPage_PleaseEnterYourName=Bitte gebe Deinen Namen ein.
+ModuleStudioProjectWizard_AppSettingsPage_PleaseEnterYourUrl=Bitte gebe Deine URL ein.
+ModuleStudioProjectWizard_AppSettingsPage_ThankYou=Vielen Dank.
+ModuleStudioProjectWizard_AppSettingsPage_Url=URL:
+ModuleStudioProjectWizard_AppSettingsPage_VendorName=Name des Anbieters:
 
 WizardNewFileCreationPage_FileLabel=Datei:
 WizardNewFileCreationPage_BrowseButton=Durchsuchen
