--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -32,12 +32,8 @@ command.help.website.name=Homepage
 command.help.website.mnemonic=O
 command.help.website.description=Die Website von ModuleStudio öffnen
 
+wizard.newproject.name=ModuleStudio-Projekt
+wizard.newproject.description=Erstellt eine neue ModuleStudio-Anwendung.
+
 unwelcome.activity.name=unwillkommen
 unwelcome.activity.description=unwillkommene Contributions
-
-
-
-
-
-newWizardName=Anwendungs-Diagramm
-newWizardDesc=Erstellt ein Anwendungs-Diagramm.
