cleaned up new project creation wizard, externalise some strings

--- a/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/wizard/messages_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/wizard/messages_de.properties
@@ -1,36 +1,37 @@
 #Properties file for de.guite.modulestudio.ui
-ModuleStudioProjectWizard_InitialProjectName=MeinProjekt
-ModuleStudioProjectWizardTitle=Neues ModuleStudio-Projekt
-ModuleStudioProjectWizard_NewProjectCreationPageTitle=Ein neues ModuleStudio-Projekt erstellen
-ModuleStudioProjectWizard_NewProjectCreationPageDescription=Gebe einen Projektnamen ein
-
-
-
-
-ModuleStudioProjectWizard_DiagramModelFilePageTitle=Erstellung eines Anwendungsdiagramms
-ModuleStudioProjectWizard_DiagramModelFilePageDescription=Datei für das Anwendungsdiagramm wählen.
-ModuleStudioProjectWizard_DomainModelFilePageTitle=Erstellung eines Anwendungsmodells
-ModuleStudioProjectWizard_DomainModelFilePageDescription=Datei für das Anwendungsmodell wählen
-ModuleStudioProjectWizard_OpenEditorError=Fehler beim Öffnen des Diagramm-Editors
-ModuleStudioProjectWizard_CreationError=Probleme bei der Erstellung
-ModuleStudioProjectWizard_PageExtensionError=Der Dateiname sollte die Endung {0} haben.
-
-ModuleStudioProjectWizard_AppSettingsPage_ApplicationName=Name der Anwendung:
-ModuleStudioProjectWizard_AppSettingsPage_AuthorName=Name des Autors:
-ModuleStudioProjectWizard_AppSettingsPage_DatabaseTablePrefix=Präfix der Datenbanktabellen:
-ModuleStudioProjectWizard_AppSettingsPage_EmailAddress=E-Mail-Adresse:
-ModuleStudioProjectWizard_AppSettingsPage_PleaseEnterApplicationName=Bitte gebe einen Namen für Deine Anwendung ein.
-ModuleStudioProjectWizard_AppSettingsPage_PleaseEnterPrefix=Bitte gebe ein Präfix für die Datenbanktabellen Deiner Anwendung ein.
-ModuleStudioProjectWizard_AppSettingsPage_PleaseEnterTheVendorName=Bitte gebe einen Namen für den Anbieter ein.
-ModuleStudioProjectWizard_AppSettingsPage_PleaseEnterYourEmailAddress=Bitte gebe Deine E-Mail-Adresse ein.
-ModuleStudioProjectWizard_AppSettingsPage_PleaseEnterYourName=Bitte gebe Deinen Namen ein.
-ModuleStudioProjectWizard_AppSettingsPage_PleaseEnterYourUrl=Bitte gebe Deine URL ein.
-ModuleStudioProjectWizard_AppSettingsPage_ThankYou=Vielen Dank.
-ModuleStudioProjectWizard_AppSettingsPage_Url=URL:
-ModuleStudioProjectWizard_AppSettingsPage_VendorName=Name des Anbieters:
-
-WizardNewFileCreationPage_FileLabel=Datei:
-WizardNewFileCreationPage_BrowseButton=Durchsuchen
-WizardNewFileCreationPage_SelectNewFileDialog=Neue Datei wählen
-WizardNewFileCreationPage_EmptyFileNameError=Dateinamen spezifizieren
-WizardNewFileCreationPage_InvalidFileNameError=Ungültiger Dateiname
+ModuleStudioNewProjectWizard_InitialProjectName=MeinProjekt
+ModuleStudioNewProjectWizardTitle=Neues ModuleStudio-Projekt
+ModuleStudioNewProjectWizard_NewProjectCreationPageTitle=Ein neues ModuleStudio-Projekt erstellen
+ModuleStudioNewProjectWizard_NewProjectCreationPageDescription=Gebe einen Projektnamen ein
+ModuleStudioNewProjectWizard_CreationError=Das Erstellen des Projektes ist fehlgeschlagen
+ModuleStudioNewProjectWizard_AppSettingsPageTitle=Grundlegende Einstellungen der Anwendung
+ModuleStudioNewProjectWizard_AppSettingsPageDescription=Bitte gebe einige grundlegende Informationen zu dieser Anwendung ein. Dies ist lediglich eine Abkürzung, um zu verhindern, dass dieser Schritt vergessen wird. Du kannst alle diese Felder auch in der Property View verändern.
+ModuleStudioNewProjectWizard_AppSettingsPage_ApplicationName=Name der Anwendung:
+ModuleStudioNewProjectWizard_AppSettingsPage_AuthorName=Name des Autors:
+ModuleStudioNewProjectWizard_AppSettingsPage_DatabaseTablePrefix=Präfix der Datenbanktabellen:
+ModuleStudioNewProjectWizard_AppSettingsPage_EmailAddress=E-Mail-Adresse:
+ModuleStudioNewProjectWizard_AppSettingsPage_PleaseEnterApplicationName=Bitte gebe einen Namen für Deine Anwendung ein.
+ModuleStudioNewProjectWizard_AppSettingsPage_PleaseEnterPrefix=Bitte gebe ein Präfix für die Datenbanktabellen Deiner Anwendung ein.
+ModuleStudioNewProjectWizard_AppSettingsPage_PleaseEnterTheVendorName=Bitte gebe einen Namen für den Anbieter ein.
+ModuleStudioNewProjectWizard_AppSettingsPage_PleaseEnterYourEmailAddress=Bitte gebe Deine E-Mail-Adresse ein.
+ModuleStudioNewProjectWizard_AppSettingsPage_PleaseEnterYourName=Bitte gebe Deinen Namen ein.
+ModuleStudioNewProjectWizard_AppSettingsPage_PleaseEnterYourUrl=Bitte gebe Deine URL ein.
+ModuleStudioNewProjectWizard_AppSettingsPage_ThankYou=Vielen Dank.
+ModuleStudioNewProjectWizard_AppSettingsPage_Url=URL:
+ModuleStudioNewProjectWizard_AppSettingsPage_VendorName=Name des Anbieters:
+ModuleStudioProjectImportWizardTitle=Externes Projekt öffnen
+ModuleStudioProjectImportWizardDescription=Ein bestehendes Projekt öffnen.
+ModuleStudioProjectImportWizard_SelectDirectory=Verzeichnis wählen:
+ModuleStudioProjectImportWizard_SelectDirectoryMessage=Wähle einen Ordner, um nach bestehenden ModuleStudio-Projekten zu suchen.
+ModuleStudioProjectImportWizard_SearchingForProjects=Suche nach Projekten
+ModuleStudioProjectImportWizard_ProcessingResults=Verarbeite Ergebnisse
+ModuleStudioProjectImportWizard_AlreadyExistingProject=Einige Projekte können nicht importiert werden, da sie bereits im Arbeitsbereich existieren.
+ModuleStudioProjectImportWizard_NoProjectsFound=Es wurden keine Projekte gefunden, wähle ein anderes Verzeichnis aus.
+ModuleStudioProjectImportWizard_Checking=Prüfe:
+ModuleStudioProjectImportWizard_BrowseSelectDirectory=Wähle das Verzeichnis des zu öffnenden Projektes aus.
+ModuleStudioProjectImportWizard_CreationProblems=Probleme beim Erstellen
+ModuleStudioProjectImportWizard_ClosingProjectFailed=Das Schließen eines offenen Projektes ist fehlgeschlagen.
+ModuleStudioProjectImportWizard_CreatingProjects=Erstelle Projekte
+ModuleStudioProjectImportWizard_LoadProject=Lade Projekt
+ModuleStudioProjectImportWizard_CloseProjects=Projekte schließen
+ModuleStudioProjectImportWizard_CreateProject=Projekt erstellen
