added toggle actions for relevant views

--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -1,4 +1,4 @@
-
+#Properties file for de.guite.modulestudio.ui
 pluginName=ModuleStudio UI
 providerName = Guite - Guckelsberger Informationstechnik
 fragmentName = ModuleStudio UI Locales Deutsch
@@ -25,6 +25,18 @@ command.file.importxmltables.description=Alte Tabellendefinition aus XML-Datei i
 command.file.generate.name=Anwendung generieren
 command.file.generate.mnemonic=G
 command.file.generate.description=Den Generator-Workflow starten
+command.window.opendashboardview.name=Dashboard anzeigen
+command.window.opendashboardview.mnemonic=D
+command.window.opendashboardview.description=Die Dashboard View anzeigen
+command.window.openoutlineview.name=Umriss anzeigen
+command.window.openoutlineview.mnemonic=U
+command.window.openoutlineview.description=Die Outline View anzeigen
+command.window.openpropertiesview.name=Eigenschaften anzeigen
+command.window.openpropertiesview.mnemonic=E
+command.window.openpropertiesview.description=Die Properties View anzeigen
+command.window.openproblemview.name=Probleme anzeigen
+command.window.openproblemview.mnemonic=P
+command.window.openproblemview.description=Die Problem View anzeigen
 command.help.keyassist.name=Tastaturhilfe
 command.help.keyassist.mnemonic=T
 command.help.keyassist.description=Tastaturbelegung einblenden
