externalise preferences page

--- a/production/de.guite.modulestudio.ui.preferences.nl1.de/de/guite/modulestudio/ui/preferences/messages_de.properties
+++ b/production/de.guite.modulestudio.ui.preferences.nl1.de/de/guite/modulestudio/ui/preferences/messages_de.properties
@@ -1,1 +1,10 @@
 #Properties file for de.guite.modulestudio.ui.preferences
+PreferencePage_Description=Gebe hier Deine Standardvorgaben ein.
+PreferencePage_Vendor=Anbieter
+PreferencePage_Author=Autor
+PreferencePage_EmailAddress=E-Mail-Adresse
+PreferencePage_Url=URL
+PreferencePage_IgnoreModelWarningsDuringGeneration=Modellwarnungen während Generierung ignorieren
+PreferencePage_IgnoreModelWarningsDuringGenerationDescription=Wenn aktiviert, fragt der Generator-Workflow nicht, ob mit einem Modell, welches Warnungen enthält, fortgefahren werden soll.
+PreferencePage_OverrideExistingFiles=Bestehende Dateien überschreiben
+PreferencePage_OverrideExistingFilesDescription=Wenn aktiviert, bricht der Generator-Workflow nicht ab, falls Dateien im ausgewählten Ausgabeordner existieren. Mit Vorsicht verwenden!
