externalised more UI strings

--- a/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/app/messages_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/app/messages_de.properties
@@ -1,4 +1,4 @@
-#Properties file for de.guite.modulestudio.ui
+#Properties file for de.guite.modulestudio.ui.app
 ApplicationMenuName_File=&Datei
 ApplicationMenuName_Edit=&Bearbeiten
 ApplicationMenuName_Window=&Fenster
