--- a/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/wizard/messages_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/wizard/messages_de.properties
@@ -1,4 +1,4 @@
-#Properties file for de.guite.modulestudio.ui
+#Properties file for de.guite.modulestudio.ui.wizard
 ModuleStudioNewProjectWizard_InitialProjectName=MeinProjekt
 ModuleStudioNewProjectWizardTitle=Neues ModuleStudio-Projekt
 ModuleStudioNewProjectWizard_NewProjectCreationPageTitle=Ein neues ModuleStudio-Projekt erstellen
