--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -44,6 +44,7 @@ command.help.website.name=Homepage
 command.help.website.mnemonic=O
 command.help.website.description=Die Website von ModuleStudio öffnen
 
+wizard.category.modulestudio=ModuleStudio
 wizard.newproject.name=ModuleStudio-Projekt
 wizard.newproject.description=Erstellt eine neue ModuleStudio-Anwendung.
 
