implemented auto-save of dirty editors before generation

--- a/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/commands/messages.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/commands/messages.properties
@@ -16,8 +16,7 @@ ExportHandler_ErrorDuringExportingRepresentation=Fehler beim Exportieren der Rep
 GenerateHandler_NoModelOpened_Title=Kein Modell geöffnet
 GenerateHandler_NoModelOpened_Message=Du musst ein Modell geöffnet haben, um die Generierung zu starten.
 GenerateHandler_ModelUnsaved_Title=Modell hat ungespeicherte Änderungen
-GenerateHandler_ModelUnsaved_Message=Bitte speichere Dein Modell vor Start der Generierung.
-GenerateHandler_ModelUnsaved_Message2=Wird in einer späteren Version automatisiert.
+GenerateHandler_ModelUnsaved_Message=Dein Modell konnte nicht automatisch gespeichert werden. Bitte speichere es vor Start der Generierung.
 GenerateHandler_ModelHasErrors_Title=Modell hat Fehler
 GenerateHandler_ModelHasErrors_Message=Dein Modell hat ungelöste Fehler. Bitte korrigiere diese vor Start der Generierung.
 GenerateHandler_ModelHasWarnings_Title=Modell hat Warnungen
