--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -25,16 +25,28 @@ command.file.importxmltables.description=Alte Tabellendefinition aus XML-Datei i
 command.file.generate.name=Anwendung generieren
 command.file.generate.mnemonic=G
 command.file.generate.description=Den Generator-Workflow starten
-command.window.opendashboardview.name=Dashboard anzeigen
+command.window.openentitiesdiagrameditor.name=Entitäten Diagramm öffnen
+command.window.openentitiesdiagrameditor.mnemonic=E
+command.window.openentitiesdiagrameditor.description=Den Diagramm-Editor für Entitäten anzeigen
+command.window.openvariablestableeditor.name=Variablen Tabelle öffnen
+command.window.openvariablestableeditor.mnemonic=V
+command.window.openvariablestableeditor.description=Den Tabellen-Editor für Variablen anzeigen
+command.window.openentitiestableeditor.name=Entitäten Tabelle öffnen
+command.window.openentitiestableeditor.mnemonic=T
+command.window.openentitiestableeditor.description=Den Tabellen-Editor für Entitäten-Felder anzeigen
+command.window.openentitiestreeeditor.name=Entitäten-Baum öffnen
+command.window.openentitiestreeeditor.mnemonic=B
+command.window.openentitiestreeeditor.description=Den Hierarchienbaum-Editor für Entitäten-Felder anzeigen
+command.window.opendashboardview.name=Dashboard öffnen
 command.window.opendashboardview.mnemonic=D
 command.window.opendashboardview.description=Die Dashboard View anzeigen
-command.window.openoutlineview.name=Umriss anzeigen
+command.window.openoutlineview.name=Umriss öffnen
 command.window.openoutlineview.mnemonic=U
 command.window.openoutlineview.description=Die Outline View anzeigen
-command.window.openpropertiesview.name=Eigenschaften anzeigen
+command.window.openpropertiesview.name=Eigenschaften öffnen
 command.window.openpropertiesview.mnemonic=E
 command.window.openpropertiesview.description=Die Properties View anzeigen
-command.window.openproblemview.name=Probleme anzeigen
+command.window.openproblemview.name=Probleme öffnen
 command.window.openproblemview.mnemonic=P
 command.window.openproblemview.description=Die Problem View anzeigen
 command.help.keyassist.name=Tastaturhilfe
