--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -10,6 +10,9 @@ view.dashboard.name=Dashboard
 command.file.newapplication.name=Neue Anwendung
 command.file.newapplication.mnemonic=N
 command.file.newapplication.description=Eine neue Anwendung erstellen
+command.file.submenu.open.name=Modell öffnen
+command.file.submenu.open.mnemonic=M
+command.file.submenu.open.description=Ein Modell öffnen oder importieren
 command.file.openproject.name=Projekt öffnen
 command.file.openproject.mnemonic=O
 command.file.openproject.description=Ein bestehendes Modellprojekt öffnen
@@ -25,6 +28,12 @@ command.file.importxmltables.description=Alte Tabellendefinition aus XML-Datei i
 command.file.generate.name=Anwendung generieren
 command.file.generate.mnemonic=G
 command.file.generate.description=Den Generator-Workflow starten
+command.window.submenu.editors.name=Editoren
+command.window.submenu.editors.mnemonic=E
+command.window.submenu.editors.description=Unterschiedliche Modell-Editoren
+command.window.submenu.views.name=Views
+command.window.submenu.views.mnemonic=V
+command.window.submenu.views.description=Unterschiedlicht zusätzliche Ansichten
 command.window.openentitiesdiagrameditor.name=Entitäten Diagramm öffnen
 command.window.openentitiesdiagrameditor.mnemonic=E
 command.window.openentitiesdiagrameditor.description=Den Diagramm-Editor für Entitäten anzeigen
