added error log view

--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -49,6 +49,9 @@ command.window.openentitiestreeeditor.description=Den Hierarchienbaum-Editor für
 command.window.opendashboardview.name=Dashboard öffnen
 command.window.opendashboardview.mnemonic=D
 command.window.opendashboardview.description=Die Dashboard View anzeigen
+command.window.openerrorlogview.name=Fehlerprotokoll öffnen
+command.window.openerrorlogview.mnemonic=F
+command.window.openerrorlogview.description=Die Error Log View anzeigen
 command.window.openoutlineview.name=Umriss öffnen
 command.window.openoutlineview.mnemonic=U
 command.window.openoutlineview.description=Die Outline View anzeigen
