added check if main editor is open for generation

--- a/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/commands/messages.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/commands/messages.properties
@@ -13,6 +13,8 @@ ExportHandler_ErrorDuringImageExport=Fehler beim Bildexport
 ExportHandler_ExportImpossible=Bildexport nicht möglich
 ExportHandler_RepresentationsTooLarge=Eine oder mehrere Repräsentationen konnten nicht exportiert werden, da sie zu groß sind
 ExportHandler_ErrorDuringExportingRepresentation=Fehler beim Exportieren der Repräsentation als Bild
+GenerateHandler_SelectMainEditor_Title=Haupteditor benötigt
+GenerateHandler_SelectMainEditor_Message=Bitte öffne und aktiviere den Haupt-Diagramm-Editor zum Generieren.
 GenerateHandler_NoModelOpened_Title=Kein Modell geöffnet
 GenerateHandler_NoModelOpened_Message=Du musst ein Modell geöffnet haben, um die Generierung zu starten.
 GenerateHandler_ModelUnsaved_Title=Modell hat ungespeicherte Änderungen
