working on auto-update function

--- a/production/de.guite.modulestudio.ui.preferences.nl1.de/de/guite/modulestudio/ui/preferences/messages_de.properties
+++ b/production/de.guite.modulestudio.ui.preferences.nl1.de/de/guite/modulestudio/ui/preferences/messages_de.properties
@@ -8,3 +8,5 @@ PreferencePage_IgnoreModelWarningsDuringGeneration=Modellwarnungen während Gener
 PreferencePage_IgnoreModelWarningsDuringGenerationDescription=Wenn aktiviert, fragt der Generator-Workflow nicht, ob mit einem Modell, welches Warnungen enthält, fortgefahren werden soll.
 PreferencePage_OverrideExistingFiles=Bestehende Dateien überschreiben
 PreferencePage_OverrideExistingFilesDescription=Wenn aktiviert, bricht der Generator-Workflow nicht ab, falls Dateien im ausgewählten Ausgabeordner existieren. Mit Vorsicht verwenden!
+PreferencePage_UseStagingUpdates=Staging Updates verwenden
+PreferencePage_UseStagingUpdatesDescription=Wenn aktiviert, verwendet die automatische Aktualisierung auch instabile Releases.
