fixed translation of quick fixes

--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -1,3 +1,4 @@
+#Properties file for de.guite.modulestudio.mostdsl.ui.quickfix.layer
 MostDslQuickfixProvider.AddABooleanFieldToTheEntity=Ein Boolean-Feld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddABooleanVariableTo=Eine Boolean-Variable zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddACalculatedFieldToTheEntity=Ein berechnetes Feld zum Datenobjekt '{0}' hinzufügen
