added validation rules for ordering related items

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -246,6 +246,8 @@ MostDslValidator.RelationshipInheritanceNoCyclesAllowed=Vererbungszyklen sind ni
 MostDslValidator.RelationshipJoinCSelfNeedsDifferentFieldsForBothSides=Die Selbstbeziehung darf das Feld {0} nicht für sowohl Quelle als auch Ziel referenzieren.
 MostDslValidator.RelationshipJoinCustomNeedsEqualTypes=Die Felder {0} und {1} müssen den gleichen Typ und die gleiche Länge haben.
 MostDslValidator.RelationshipJoinManyToManyNeedsRefClass=Eine Viele-zu-Viele-Beziehung muss das refClass-Attribut definieren.
+MostDslValidator.RelationshipJoinManyToManyNeedsValidOrderBySourceField=Das Attribut orderByReverse zeigt auf ein ungültiges Feld der Quell-Entität.
+MostDslValidator.RelationshipJoinManyToManyNeedsValidOrderByTargetField=Das Attribut orderBy zeigt auf ein ungültiges Feld der Ziel-Entität.
 MostDslValidator.RelationshipJoinManyToManyRefClassMustBeUnique=Das refClass-Attribut muss eindeutig sein für alle Beziehungen.
 MostDslValidator.RelationshipJoinManyToManyRefClassMustNotEqualEntity=Das refClass-Attribut darf nicht gleich dem Namen einer Entität sein.
 MostDslValidator.RelationshipJoinManyToManySourceLimitsNeedBothMinAndMaxProperties=Das Erzwingen einer bestimmten Anzahl von Einträgen auf der Quellseite benötigt das Setzen beider minSource- und maxSource-Eigenschaften.
@@ -265,6 +267,7 @@ MostDslValidator.RelationshipJoinNeedsValidSourceField=Das sourceField-Attribut 
 MostDslValidator.RelationshipJoinNeedsValidSourceFieldType=Das Feld {0} muss ein Integer-Feld mit einer Länge von 11 sein.
 MostDslValidator.RelationshipJoinNeedsValidTargetField=Das targetField-Attribut muss entweder 'id' für automatischen Primärschlüssel oder eine kommaseparierte Liste von zu referenzierenden {0}-Feldern beinhalten. Beachte, dass das Trennzeichen ', ' ist, inklusive der Leertaste.
 MostDslValidator.RelationshipJoinNeedsValidTargetFieldType=Das Feld {0} muss ein Integer-Feld mit einer Länge von 11 sein.
+MostDslValidator.RelationshipJoinOneToManyNeedsValidOrderByTargetField=Das Attribut orderBy zeigt auf ein ungültiges Feld der Ziel-Entität.
 MostDslValidator.RelationshipJoinOneToManyTargetLimitsNeedBothMinAndMaxProperties=Das Erzwingen einer bestimmten Anzahl von Einträgen auf der Zielseite benötigt das Setzen beider minTarget- und maxTarget-Eigenschaften.
 MostDslValidator.RelationshipJoinOneToManyTargetMinLimitGreaterThanMaxLimit=Die maximale Anzahl erzwungener Einträge auf der Zielseite darf nicht kleiner sein als die minimale Anzahl erzwungener Einträge.
 MostDslValidator.RelationshipJoinSourceAliasesMustBeUnique=Die Quell-Aliase der Beziehung müssen eindeutig sein für alle eingehenden Beziehungen einer Entität.
