--- a/production/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -533,6 +533,8 @@ _UI_Controller_application_feature = Application
 _UI_Controller_application_description = Referenz zur enthaltenden Anwendung.
 _UI_Unknown_feature = Unspezifiziert
 
+_UI_CoreVersion_ZK20_literal = ZK20
+_UI_CoreVersion_ZK14_literal = ZK14
 _UI_CoreVersion_ZKPRE14_literal = ZKPRE14
 _UI_CoreVersion_ZK136_literal = ZK136
 _UI_CoreVersion_ZK135_literal = ZK135
