added Breeze credits

--- a/production/de.guite.modulestudio.locales.feature/feature_de.properties
+++ b/production/de.guite.modulestudio.locales.feature/feature_de.properties
@@ -74,6 +74,17 @@ Unless required by applicable law or agreed to in writing, software distributed 
 See the License for the specific language governing permissions and limitations under the License.\n\
 \n\
 \n\
+-------------------------------------------------\n\
+\n\
+\n\
+Breeze Icon Theme\n\
+\n\
+ModuleStudio uses the Breeze icon theme which is made available under the terms of the GNU Lesser Public License.\n\
+\n\
+You may obtain a copy of the License at\n\
+https://github.com/NitruxSA/breeze-icon-theme/blob/master/LICENSE\n\
+\n\
+\n\
 \n\
 \n\
 \n\
@@ -143,6 +154,17 @@ Licensed under the Apache License, Version 2.0 (the "License"); you may not use 
 http://www.apache.org/licenses/LICENSE-2.0 \n\
 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n\
 See the License for the specific language governing permissions and limitations under the License.\n\
+\n\
+\n\
+-------------------------------------------------\n\
+\n\
+\n\
+Breeze Icon Theme\n\
+\n\
+ModuleStudio uses the Breeze icon theme which is made available under the terms of the GNU Lesser Public License.\n\
+\n\
+You may obtain a copy of the License at\n\
+https://github.com/NitruxSA/breeze-icon-theme/blob/master/LICENSE\n\
 
 # Label for the update site
 mostUpdateSiteName=ModuleStudio (MOST) Updates
