added entity property for skipping subscriber hooks

--- a/production/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -8,8 +8,8 @@ _UI_CreateChild_text = {0}
 _UI_CreateChild_text2 = {1} {0}
 _UI_CreateChild_text3 = {1}
 _UI_CreateChild_tooltip = Neues {0} unter dem Feature {1} erstellen
-_UI_CreateChild_description = Ein neues Kind vom Typ {0} für das Feature {1} des selektierten {2} erstellen.
-_UI_CreateSibling_description = Einen neuen Bruder vom Typ {0} für das ausgewählte {2}, unter dem Feature {1} des Parents erstellen.
+_UI_CreateChild_description = Einen neuen Untereintrag vom Typ {0} für das Feature {1} des selektierten {2} erstellen.
+_UI_CreateSibling_description = Einen neuen Nachbareintrag vom Typ {0} für das ausgewählte {2}, unter dem Feature {1} des Parents erstellen.
 
 _UI_PropertyDescriptor_description = The {0} of the {1}
 
@@ -249,6 +249,8 @@ _UI_Entity_ownerPermission_feature = Eigner Zugriffsrecht
 _UI_Entity_ownerPermission_description = Ob Benutzer ihre eigenen Daten verwalten und ändern können sollen.
 _UI_Entity_softDeleteable_feature = Soft Deleteable
 _UI_Entity_softDeleteable_description = Ob gelöschte Einträge nur als gelöscht markiert werden sollen anstatt sie zu löschen.
+_UI_Entity_skipHookSubscribers_feature = Hook-Subscriber überspringen
+_UI_Entity_skipHookSubscribers_description = Ob diese Entität Hook-Subscriber unterstützt.
 _UI_Entity_actions_feature = Actions
 _UI_Entity_actions_description = Liste der in diesem Entity Controller enthaltenen Aktionen.
 _UI_EntityField_entity_feature = Entität
