working on default perspective and views

--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -5,7 +5,12 @@ fragmentName = ModuleStudio UI Locales Deutsch
 
 perspective.name=ModuleStudio-Perspektive
 perspective.description=Die Standardperspektive von ModuleStudio
-view.dashboard.name=Dashboard
+views.category.name=ModuleStudio Views
+views.dashboard.name=Dashboard
+views.errorlog.name=Nachrichten
+views.outline.name=Outline
+views.properties.name=Eigenschaften
+views.problem.name=Probleme
 
 command.file.newapplication.name=Neue Anwendung
 command.file.newapplication.mnemonic=N
@@ -46,9 +51,9 @@ command.window.openentitiestableeditor.description=Den Tabellen-Editor für Entit
 command.window.opendashboardview.name=Dashboard öffnen
 command.window.opendashboardview.mnemonic=D
 command.window.opendashboardview.description=Die Dashboard View anzeigen
-command.window.openerrorlogview.name=Fehlerprotokoll öffnen
+command.window.openerrorlogview.name=Protokoll öffnen
 command.window.openerrorlogview.mnemonic=F
-command.window.openerrorlogview.description=Die Error Log View anzeigen
+command.window.openerrorlogview.description=Die Nachrichten View anzeigen
 command.window.openoutlineview.name=Umriss öffnen
 command.window.openoutlineview.mnemonic=U
 command.window.openoutlineview.description=Die Outline View anzeigen
