basic theme switch implementation

--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -63,6 +63,9 @@ command.window.openpropertiesview.description=Die Properties View anzeigen
 command.window.openproblemview.name=Probleme öffnen
 command.window.openproblemview.mnemonic=P
 command.window.openproblemview.description=Die Problem View anzeigen
+command.window.switchtheme.name=Theme wechseln
+command.window.switchtheme.mnemonic=T
+command.window.switchtheme.description=Zwischen hellem und dunklen Design umschalten
 command.help.website.name=Homepage
 command.help.website.mnemonic=O
 command.help.website.description=Die Website von ModuleStudio öffnen
