--- a/production/de.guite.modulestudio.ui.preferences.nl1.de/de/guite/modulestudio/ui/preferences/messages_de.properties
+++ b/production/de.guite.modulestudio.ui.preferences.nl1.de/de/guite/modulestudio/ui/preferences/messages_de.properties
@@ -1,5 +1,6 @@
 #Properties file for de.guite.modulestudio.ui.preferences
 PreferencePage_Description=Gebe hier Deine Standardvorgaben ein.
+PreferencePage_Theme=Standard-Theme
 PreferencePage_Vendor=Anbieter
 PreferencePage_Author=Autor
 PreferencePage_EmailAddress=E-Mail-Adresse
