added validate action to file menu (as diagram menu is now hidden)

--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -30,6 +30,9 @@ command.file.migrateoldmodel.description=Ein altes Modell aus Version 0.6.2 migr
 command.file.importxmltables.name=XML-Tabellendefinition importieren
 command.file.importxmltables.mnemonic=I
 command.file.importxmltables.description=Alte Tabellendefinition aus XML-Datei importieren
+command.file.validate.name=Diagramm validieren
+command.file.validate.mnemonic=V
+command.file.validate.description=Das aktuell geöffnete Diagramm auf Fehler untersuchen
 command.file.generate.name=Anwendung generieren
 command.file.generate.mnemonic=G
 command.file.generate.description=Den Generator-Workflow starten
