--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -10,7 +10,7 @@ views.dashboard.name=Dashboard
 views.errorlog.name=Nachrichten
 views.outline.name=Outline
 views.properties.name=Eigenschaften
-views.problem.name=Probleme
+views.problems.name=Probleme
 
 command.file.newapplication.name=Neue Anwendung
 command.file.newapplication.mnemonic=N
