added labels to dashboard items

--- a/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/views/messages_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/views/messages_de.properties
@@ -1,12 +1,21 @@
 #Properties file for de.guite.modulestudio.ui.views
 DashboardView_SelectOrCreateProject=Wähle oder erstelle ein Projekt!
 DashboardView_YourCurrentProject=Dein aktuelles Projekt:
+DashboardView_NewApp=Neue App
 DashboardView_CreateNewApplication=Eine neue Anwendung erstellen
-DashboardView_OpenProject=Ein bestehendes Modellprojekt öffnen
+DashboardView_OpenProject=Projekt öffnen
+DashboardView_OpenExistingProject=Ein bestehendes Modellprojekt öffnen
+DashboardView_ImportModel=Modell importieren
 DashboardView_ImportModelFile=Eine bestehende Modelldatei importieren
-DashboardView_MigrateOldModel=Ein altes Modell aus Version 0.6.2 migrieren
-DashboardView_EntitiesDiagram=Den Diagramm-Editor für Entitäten anzeigen
-DashboardView_VariablesTable=Den Tabellen-Editor für Variablen anzeigen
-DashboardView_EntitiesTable=Den Tabellen-Editor für Entitäten-Felder anzeigen
-DashboardView_Preferences=ModuleStudio Einstellungen ändern
-DashboardView_Generate=Den Generator-Workflow starten
+DashboardView_MigrateOldModel=Altes Modell migrieren
+DashboardView_MigrateAnOldModel=Ein altes Modell aus Version 0.6.2 migrieren
+DashboardView_DiagramEditor=Diagramm-Editor
+DashboardView_DisplayDiagramEditor=Den Diagramm-Editor anzeigen
+DashboardView_VariablesTable=Variablen-Tabelle
+DashboardView_DisplayVariablesTable=Den Tabellen-Editor für Variablen anzeigen
+DashboardView_EntitiesTable=Entitäten-Tabelle
+DashboardView_DisplayEntitiesTable=Den Tabellen-Editor für Entitäten-Felder anzeigen
+DashboardView_Preferences=Einstellungen
+DashboardView_OpenPreferences=ModuleStudio Einstellungen ändern
+DashboardView_Generate=App generieren
+DashboardView_GenerateApp=Deine Anwendung generieren
