--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -42,9 +42,9 @@ command.window.submenu.editors.description=Unterschiedliche Modell-Editoren
 command.window.submenu.views.name=Views
 command.window.submenu.views.mnemonic=V
 command.window.submenu.views.description=Unterschiedliche zusätzliche Ansichten
-command.window.openentitiesdiagrameditor.name=Entitäten Diagramm öffnen
-command.window.openentitiesdiagrameditor.mnemonic=E
-command.window.openentitiesdiagrameditor.description=Den Diagramm-Editor für Entitäten anzeigen
+command.window.opendiagrameditor.name=Diagramm öffnen
+command.window.opendiagrameditor.mnemonic=D
+command.window.opendiagrameditor.description=Den Diagramm-Editor anzeigen
 command.window.openvariablestableeditor.name=Variablen Tabelle öffnen
 command.window.openvariablestableeditor.mnemonic=V
 command.window.openvariablestableeditor.description=Den Tabellen-Editor für Variablen anzeigen
