--- a/production/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -407,6 +407,8 @@ _UI_AbstractDateField_timestampableChangeTriggerField_feature = Timestampable Ch
 _UI_AbstractDateField_timestampableChangeTriggerField_description = Timestampable Change Trigger Feldname.
 _UI_AbstractDateField_timestampableChangeTriggerValue_feature = Timestampable Change Trigger Wert
 _UI_AbstractDateField_timestampableChangeTriggerValue_description = Timestampable Change Trigger Feldwert.
+_UI_AbstractDateField_validatorAddition_feature = Validierung Zusatz
+_UI_AbstractDateField_validatorAddition_description = Zusätzliche Validierungsregel ohne die Asset-Annotation.
 _UI_DatetimeField_startDate_feature = Startdatum
 _UI_DatetimeField_startDate_description = Ob dieses Feld als ein Startdatum behandelt werden soll.
 _UI_DatetimeField_endDate_feature = Enddatum
