added checkDNS validator to url field meta class

--- a/production/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -359,6 +359,8 @@ _UI_EmailField_checkHost_feature = Host-Check
 _UI_EmailField_checkHost_description = Ob die Validität des MX- oder A- oder AAAA-Records des gegebenen E-Mail-Hosts geprüft wird.
 _UI_UrlField_length_feature = Länge
 _UI_UrlField_length_description = Die Länge dieses Feldes.
+_UI_UrlField_checkDNS_feature = DNS-Check
+_UI_UrlField_checkDNS_description = Ob der assoziierte Host geprüft wird.
 _UI_UploadField_length_feature = Länge
 _UI_UploadField_length_description = Die Länge dieses Feldes.
 _UI_UploadField_allowedExtensions_feature = Erlaubte Dateiendungen
