added multiline property to text vars for textarea fields

--- a/production/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -511,6 +511,8 @@ _UI_Variable_container_feature = Container
 _UI_Variable_container_description = Referenz zu dem enthaltenden Variablen-Container.
 _UI_TextVar_maxLength_feature = Max Länge
 _UI_TextVar_maxLength_description = Maximale Länge (Anzahl an Zeichen).
+_UI_TextVar_multiline_feature = Mehrzeilig
+_UI_TextVar_multiline_description = Ob dieses Feld ein- oder mehrzeilig ist.
 _UI_FilePathVar_withinDocRoot_feature = Innerhalb Doc Root
 _UI_FilePathVar_withinDocRoot_description = Ob der Pfad innerhalb des Document Root sein muss oder nicht.
 _UI_FilePathVar_writable_feature = Beschreibbar
