added new define

--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -69,6 +69,8 @@ command.window.openproblemview.description=Die Problem View anzeigen
 command.window.switchtheme.name=Theme wechseln
 command.window.switchtheme.mnemonic=T
 command.window.switchtheme.description=Zwischen hellem und dunklen Design umschalten
+command.validate.name=Validieren
+command.validate.label=Validieren
 
 wizard.category.modulestudio=ModuleStudio
 wizard.newproject.name=ModuleStudio-Projekt
