--- a/production/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -380,7 +380,7 @@ _UI_ListField_max_description = Maximale Anzahl von Werten, deren Auswahl erzwun
 _UI_ListField_multiple_feature = Mehrfach
 _UI_ListField_multiple_description = Ob mehrere Einträge ausgewählt werden können oder nicht.
 _UI_ListField_useChecks_feature = Checkboxen verwenden
-_UI_ListField_useChecks_description = Aktivieren um eine Checkbox-Liste zu erstellen (nur für Listen mit Mehrfachauswahl).
+_UI_ListField_useChecks_description = Aktivieren um Radio-Buttons (für einwertige Listen) oder Checkboxen (für mehrwertige Listen) an Stelle eines Select-Feldes zu erstellen.
 _UI_ListField_items_feature = Einträge
 _UI_ListField_items_description = Liste von Dropdown-Optionen.
 _UI_ListFieldItem_value_feature = Wert
